# pedalboard

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  NOTICE  OWNERS.md  README.md  catalog-info.yaml  citation.html  compatibility.html  dev-requirements.txt  docs-requirements.txt  examples.html  faq.html  genindex.html  index.html  internals.html  license.html  objects.inv  pedalboard-demo.ipynb  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stubtest.allowlist  test-requirements.txt  tox.ini
vendors/fftw3/: AUTHORS  CMakeLists.txt  CONVENTIONS  COPYRIGHT  ChangeLog  FFTW3Config.cmake.in  FFTW3ConfigVersion.cmake.in  Makefile.am  Makefile.in  NEWS  README  README-perfcnt.md  TODO  aclocal.m4  bootstrap.sh  cmake.config.h.in  config.h.in  configure  configure.ac  fftw.pc.in
vendors/fftw3/api/: Makefile.am  Makefile.in  api.h  apiplan.c  configure.c  execute-dft-c2r.c  execute-dft-r2c.c  execute-dft.c  execute-r2r.c  execute-split-dft-c2r.c  execute-split-dft-r2c.c  execute-split-dft.c  execute.c  export-wisdom-to-file.c  export-wisdom-to-string.c  export-wisdom.c  f03api.sh  f77api.c  f77funcs.h  fftw3.f03.in  fftw3.h  flops.c  forget-wisdom.c  genf03.pl  guru.h  guru64.h  import-system-wisdom.c  import-wisdom-from-file.c  import-wisdom-from-string.c  import-wisdom.c  malloc.c  map-r2r-kind.c  mapflags.c  mkprinter-file.c  mkprinter-str.c  mktensor-iodims.c  mktensor-iodims.h  mktensor-iodims64.c  mktensor-rowmajor.c  plan-dft-1d.c  (+45 more)
vendors/fftw3/dft/: Makefile.am  Makefile.in  bluestein.c  buffered.c  codelet-dft.h  conf.c  ct.c  ct.h  dft.h  dftw-direct.c  dftw-directsq.c  dftw-generic.c  dftw-genericbuf.c  direct.c  generic.c  indirect-transpose.c  indirect.c  kdft-dif.c  kdft-difsq.c  kdft-dit.c  kdft.c  nop.c  plan.c  problem.c  rader.c  rank-geq2.c  solve.c  vrank-geq1.c  zero.c
vendors/fftw3/doc/: Makefile.am  Makefile.in  acknowledgements.texi  cindex.texi  f77_wisdom.f  fftw3.info  fftw3.info-1  fftw3.info-2  fftw3.texi  findex.texi  install.texi  intro.texi  legacy-fortran.texi  license.texi  modern-fortran.texi  mpi.texi  other.texi  reference.texi  rfftwnd.eps  rfftwnd.fig  threads.texi  tutorial.texi  upgrading.texi  version.texi
vendors/fftw3/genfft/: Makefile.am  Makefile.in  algsimp.ml  algsimp.mli  annotate.ml  annotate.mli  assoctable.ml  assoctable.mli  c.ml  c.mli  complex.ml  complex.mli  conv.ml  conv.mli  dag.ml  dag.mli  expr.ml  expr.mli  fft.ml  fft.mli  gen_hc2c.ml  gen_hc2cdft.ml  gen_hc2cdft_c.ml  gen_hc2hc.ml  gen_mdct.ml  gen_notw.ml  gen_notw_c.ml  gen_r2cb.ml  gen_r2cf.ml  gen_r2r.ml  gen_twiddle.ml  gen_twiddle_c.ml  gen_twidsq.ml  gen_twidsq_c.ml  genutil.ml  littlesimp.ml  littlesimp.mli  magic.ml  monads.ml  number.ml  (+20 more)
vendors/fftw3/kernel/: Makefile.am  Makefile.in  align.c  alloc.c  assert.c  awake.c  buffered.c  cpy1d.c  cpy2d-pair.c  cpy2d.c  ct.c  cycle.h  debug.c  extract-reim.c  hash.c  iabs.c  ifftw.h  kalloc.c  md5-1.c  md5.c  minmax.c  ops.c  pickdim.c  plan.c  planner.c  primes.c  print.c  problem.c  rader.c  scan.c  solver.c  solvtab.c  stride.c  tensor.c  tensor1.c  tensor2.c  tensor3.c  tensor4.c  tensor5.c  tensor7.c  (+7 more)
vendors/fftw3/libbench2/: Makefile.am  Makefile.in  after-ccopy-from.c  after-ccopy-to.c  after-hccopy-from.c  after-hccopy-to.c  after-rcopy-from.c  after-rcopy-to.c  allocate.c  aset.c  bench-cost-postprocess.c  bench-exit.c  bench-main.c  bench-user.h  bench.h  can-do.c  caset.c  dotens2.c  info.c  main.c  mflops.c  mp.c  my-getopt.c  my-getopt.h  ovtpvt.c  pow2.c  problem.c  report.c  speed.c  tensor.c  timer.c  useropt.c  util.c  verify-dft.c  verify-lib.c  verify-r2r.c  verify-rdft2.c  verify.c  verify.h  zero.c
vendors/fftw3/m4/: Makefile.am  Makefile.in  acx_mpi.m4  acx_pthread.m4  ax_cc_maxopt.m4  ax_compiler_vendor.m4  ax_gcc_aligns_stack.m4  ax_gcc_version.m4  ax_openmp.m4
vendors/fftw3/mpi/: Makefile.am  Makefile.in  any-true.c  api.c  block.c  choose-radix.c  conf.c  dft-problem.c  dft-rank-geq2-transposed.c  dft-rank-geq2.c  dft-rank1-bigvec.c  dft-rank1.c  dft-serial.c  dft-solve.c  dtensor.c  f03-wrap.c  f03-wrap.sh  f03api.sh  fftw3-mpi.f03.in  fftw3-mpi.h  fftw3l-mpi.f03.in  genf03-wrap.pl  ifftw-mpi.h  mpi-bench.c  mpi-dft.h  mpi-rdft.h  mpi-rdft2.h  mpi-transpose.h  rdft-problem.c  rdft-rank-geq2-transposed.c  rdft-rank-geq2.c  rdft-rank1-bigvec.c  rdft-serial.c  rdft-solve.c  rdft2-problem.c  rdft2-rank-geq2-transposed.c  rdft2-rank-geq2.c  rdft2-serial.c  rdft2-solve.c  rearrange.c  (+7 more)
vendors/fftw3/rdft/: Makefile.am  Makefile.in  buffered.c  buffered2.c  codelet-rdft.h  conf.c  ct-hc2c-direct.c  ct-hc2c.c  ct-hc2c.h  dft-r2hc.c  dht-r2hc.c  dht-rader.c  direct-r2c.c  direct-r2r.c  direct2.c  generic.c  hc2hc-direct.c  hc2hc-generic.c  hc2hc.c  hc2hc.h  indirect.c  khc2c.c  khc2hc.c  kr2c.c  kr2r.c  nop.c  nop2.c  plan.c  plan2.c  problem.c  problem2.c  rank-geq2-rdft2.c  rank-geq2.c  rank0-rdft2.c  rank0.c  rdft-dht.c  rdft.h  rdft2-inplace-strides.c  rdft2-rdft.c  rdft2-strides.c  (+6 more)
vendors/fftw3/reodft/: Makefile.am  Makefile.in  conf.c  redft00e-r2hc-pad.c  redft00e-r2hc.c  reodft.h  reodft00e-splitradix.c  reodft010e-r2hc.c  reodft11e-r2hc-odd.c  reodft11e-r2hc.c  reodft11e-radix2.c  rodft00e-r2hc-pad.c  rodft00e-r2hc.c
vendors/fftw3/simd-support/: Makefile.am  Makefile.in  altivec.c  amd64-cpuid.h  avx-128-fma.c  avx.c  avx2.c  avx512.c  kcvi.c  neon.c  simd-altivec.h  simd-avx-128-fma.h  simd-avx.h  simd-avx2-128.h  simd-avx2.h  simd-avx512.h  simd-common.h  simd-generic128.h  simd-generic256.h  simd-kcvi.h  simd-neon.h  simd-sse2.h  simd-vsx.h  sse2.c  taint.c  vsx.c  x86-cpuid.h
vendors/fftw3/support/: Makefile.am  Makefile.codelets  Makefile.in  addchain.c  codelet_prelude.dft  codelet_prelude.rdft  twovers.sh
vendors/fftw3/tests/: Makefile.am  Makefile.in  README  bench.c  check.pl  fftw-bench.c  fftw-bench.h  hook.c
vendors/fftw3/threads/: Makefile.am  Makefile.in  api.c  conf.c  ct.c  dft-vrank-geq1.c  f77api.c  f77funcs.h  hc2hc.c  (+5 more)
(+3315 files in other folders)
