[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.9.0"]
build-backend = "scikit_build_core.build"

# See: https://cibuildwheel.readthedocs.io/en/stable/options/#examples
[tool.cibuildwheel.linux]
before-all = "yum install -y libsndfile libX11-devel libXrandr-devel libXinerama-devel libXrender-devel libXcomposite-devel libXinerama-devel libXcursor-devel freetype-devel alsa-lib-devel"

[[tool.cibuildwheel.overrides]]
# Use apk instead of yum when building on Alpine Linux
# (Note: this is experimental, as most VSTs require glibc and thus Alpine Linux isn't that useful)
select = "*-musllinux*"
before-all = "apk add libsndfile libx11-dev libxrandr-dev libxinerama-dev libxrender-dev libxcomposite-dev libxinerama-dev libxcursor-dev freetype-dev libexecinfo-dev alsa-lib-dev"

[project]
name = "pedalboard"
authors = [{ name = "Peter Sobot", email = "psobot@spotify.com" }]
description = "A Python library for adding effects to audio."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy"]
version = "0.9.16"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pedalboard", "pedalboard.io", "pedalboard_native"]
sdist.include = [
    "pedalboard/**/*.py",
    "pedalboard_native/**/*.py",
    "JUCE/**/*.cpp",
    "JUCE/**/*.c",
    "JUCE/**/*.h",
    "JUCE/**/*.mm",
    "JUCE/**/*.m",
    "vendors/**/*.c",
    "vendors/**/*.cpp",
    "vendors/**/*.h",
    "vendors/**/*.inc",
]
sdist.exclude = ["**/__pycache__"]

[tool.scikit-build.cmake.define]
SKBUILD = "ON"

# [tool.scikit-build.include]
# pedalboard = ["py.typed", "*.pyi", "**/*.pyi"]
# pedalboard_native = ["py.typed", "*.pyi", "**/*.pyi"]
